--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="log_in">登陆</string>
     <string name="username_error">用户名错误</string>
     <string name="password_error">密码错误</string>
+    <string name="permission_desc">权限描述</string>
+    <string name="permission_label">权限标签</string>
 </resources>
